# robot_tracking

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
config/: 20141105_red.yml  20151105_red_bluefox  camera.yml  camera_binning.yml  camera_camera_calib_kannala-brandt.yaml  camera_camera_calib_mei.yaml  camera_camera_calib_pinhole.yaml  color_green_bluefox.yml
launch/: bag_robot.launch  robot.launch
msg/: ball_msgs.msg
src/: .ball_select.cpp.swp  .main.cpp.swp  .waypoint_gen.cpp.swp  main.cpp
src/include/: CMakeLists.txt  CMakeLists.txt~  demo.cpp  demo.cpp~  robotFeature.cpp  robotFeature.h  robotTracking.cpp  robotTracking.cpp~  robotTracking.h  util.cpp  util.h  util.h~
